feat: Retrieving list of systems
