# backend/api/docs/swagger.json
@@ -386,6 +386,17 @@
             }
         },
         "/systems": {
+            "get": {
+                "description": "Retrieve a list of systems.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Systems"
+                ],
+                "summary": "System List",
+                "responses": {}
+            },
             "post": {
                 "description": "Create a new system with the specified name.",
                 "consumes": [
@@ -991,6 +1002,12 @@
         "models.SystemInfo": {
             "type": "object",
             "properties": {
+                "activePeersCount": {
+                    "type": "integer"
+                },
+                "allPeersCount": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
